<resources>
    <string name="app_name">BookMyHotel 🏨</string>
    <string name="welcome_text">Welcome👋</string>

    <string name="checkout_date">Check-out 📅</string>
    <string name="search">Search</string>
    <string name="hotel_name_hint">Enter Your Name</string>
    <string name="guest_count_hint">Number of Guests</string>

    <string name="sample_text">Sample Text</string>

    <string name="select_gender">Select Gender</string>
    <string name="guest_name">Name</string>
    <string name="guest_age">Age</string>
    <string name="guest_male">Male</string>
    <string name="guest_female">Female</string>
    <string name="guest_submit">Submit</string>
    <string name="hotel_name">Name</string>
    <string name="hotel_city">City</string>
    <string name="hotel_email">Email</string>
    <string name="hotel_price">Price</string>

</resources>