<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/welcome_text"
                android:textColor="@color/black"
                android:textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkin_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="Check-in 📅"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/checkin_date_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <DatePicker
                android:id="@+id/checkin_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/checkin_date_text_view" />

            <TextView
                android:id="@+id/checkout_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_date"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker"
                app:layout_constraintStart_toStartOf="@id/checkin_date_picker"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

            <DatePicker
                android:id="@+id/checkout_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkout_date_textview"
                android:layout_marginTop="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                app:helperText="Required"
                app:layout_constraintTop_toBottomOf="@+id/checkout_date_picker"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hotel_name_hint"
                    android:inputType="textCapWords"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/guest_count_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                app:helperText="Required"
                app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/guests_count_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:hint="@string/guest_count_hint"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guest_count_input_layout"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>